--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "description": "Build a grid of product items and ads",
     "main": "server/index.js",
     "scripts": {
+        "dev": "parcel public/index.html",
         "start": "json-server server/index.js --routes server/routes.json --middlewares server/handle-delay.js server/handle-ads.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -12,6 +13,11 @@
     "license": "",
     "dependencies": {
         "cool-ascii-faces": "^1.3.4",
-        "json-server": "^0.16.3"
+        "json-server": "^0.16.3",
+        "react": "^17.0.1",
+        "react-dom": "^17.0.1"
+    },
+    "devDependencies": {
+        "parcel-bundler": "^1.12.4"
     }
 }
