--- a/package.json
+++ b/package.json
@@ -5,19 +5,37 @@
     "description": "Build a grid of product items and ads",
     "main": "server/index.js",
     "scripts": {
-        "dev": "parcel public/index.html",
+        "dev": "craco start",
         "start": "json-server server/index.js --routes server/routes.json --middlewares server/handle-delay.js server/handle-ads.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
     "license": "",
     "dependencies": {
+        "@craco/craco": "^6.0.0",
+        "@tailwindcss/postcss7-compat": "^2.0.2",
+        "autoprefixer": "^9.8.6",
         "cool-ascii-faces": "^1.3.4",
         "json-server": "^0.16.3",
+        "postcss": "^7.0.35",
         "react": "^17.0.1",
-        "react-dom": "^17.0.1"
+        "react-dom": "^17.0.1",
+        "react-scripts": "^4.0.1",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2"
     },
     "devDependencies": {
         "parcel-bundler": "^1.12.4"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
